--- a/bmo_sale/views/sale_order.xml
+++ b/bmo_sale/views/sale_order.xml
@@ -1,14 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+
+    <record id="view_quotation_tree_inherit_bmo_sale" model="ir.ui.view">
+        <field name="name">sale.order.list (quotes).inherit.bmo_sale</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_quotation_tree"/>
+        <field name="arch" type="xml">
+
+            <xpath expr="//field[@name='create_date']" position="before">
+                <field name="po_number"/>
+            </xpath>
+            
+        </field>
+    </record>
+
     <record id="sale_order_tree_inherit_bmo_sale" model="ir.ui.view">
         <field name="name">sale.order.tree.inherit.bmo_sale</field>
         <field name="model">sale.order</field>
         <field name="inherit_id" ref="sale.sale_order_tree"/>
         <field name="arch" type="xml">
+
+            <xpath expr="//field[@name='name']" position="after">
+                <field name="po_number"/>
+            </xpath>
+
             <xpath expr="//field[@name='partner_id']" position="after">
                 <field name="sale_categ_id" optional="hide"/>
                 <field name="sale_type" optional="hide"/>
             </xpath>
+
         </field>
     </record>
 
