Up: rework new report rfq

--- a/bmo_report/reports/report_rfq_pack_raw.xml
+++ b/bmo_report/reports/report_rfq_pack_raw.xml
@@ -2,104 +2,122 @@
 <odoo>
     <template id="template_report_rfq_pack_raw">
         <t t-call="web.html_container">
-            <t t-foreach="docs" t-as="o">
-                <style>
-                    table.table-bordered { 
-                        border-top: 1px solid black;
-                        border-right: 1px solid black;
-                        border-bottom: 1px solid black;
-                        border-left: 1px solid black;
-                        border-collapse: collapse;
-                        margin-top: 0px; width: 100%;
-                        table-layout: auto;
-                    }
-                </style>
-                <div class="page">
-                    <table style="border-collapse: collapse;">
-                        <tr>
-                            <td>
-                                <img t-if="o.env.user.company_id.logo"
-                                    style="max-width: 340px; max-height: 150px;"
-                                    t-att-src="image_data_uri(o.env.user.company_id.logo)"
-                                    alt="Logo"/>
-                            </td>
-                        </tr>
-                    </table>
-                    <br/>
-                    <div>
-                        <b>Request for Quotation No. : </b> <span t-esc="o.name"/>
-                    </div>
-                    <br/>
-                    <div>
-                        <b>Date : </b><span t-if="o.date_approve" t-esc="(o.date_approve + relativedelta(hours=+7)).strftime('%d-%B-%Y')"/>
-                    </div>
-                    <div>
-                        <b>Shipping Address : </b><span t-field="o.partner_id.ship_to"/>
-                    </div>
-                    <br/>
-                    <div style="width:100%;font-weight:bold;">
-                        <b>Vendor Details :</b>
+            <t t-call="bmo_report.external_layout_custom">
+                <t t-foreach="docs" t-as="o">
+                    <style>
+                        table.table-sm { 
+                            border-top: 1px solid black;
+                            border-right: 1px solid black;
+                            border-bottom: 1px solid black;
+                            border-left: 1px solid black;
+                            border-collapse: collapse;
+                            margin-top: 0px; width: 100%;
+                            table-layout: auto;
+                        }
+                    </style>
+                    <div class="page" style="font-size:14px;">
+                        <div style="font-size:20px;">
+                            <span style="margin-right:2px;font-weight:bold;">Request for Quotation No. : </span><span t-esc="o.name"/>
+                        </div>
                         <br/>
-                        <div t-field="o.partner_id"/>
-                        <div t-field="o.partner_id.contact_address_complete"/>
-                        <div t-esc="o.partner_id.phone"/>
-                        <div t-esc="o.partner_id.email"/>
-                    </div>
-                    <br/>
-                    <div>
-                        <table class="table table-bordered">
-                            <thead >
-                                <tr style="font-size:14px">
-                                    <th style="border: 1px solid black;">Product Code</th>
-                                    <th style="border: 1px solid black;">Product Name</th>
-                                    <th style="border: 1px solid black;">Qty Required</th>
-                                    <th style="border: 1px solid black;">Expected Delivery Date</th>
-                                </tr>
-                            </thead>
-                            <tbody >
-                                <!-- <t t-foreach="o.order_line.filtered(lambda l: l.price_unit)" t-as="line"> -->
-                                <t t-foreach="o.order_line" t-as="line">
-                                    <tr style="border: 1px solid black;height: 20px;font-size:12px">
-                                        <td style="border: 1px solid black;text-align:left;">
-                                            <span t-esc="line.product_id.default_code"/>
-                                        </td>
-                                        <td style="border: 1px solid black;text-align:left;">
-                                            <t t-if="line.product_id">
-                                                <span t-esc="line.product_id.name"/>
-                                            </t>
-                                            <t t-else="">
-                                                <span t-esc="line.name"/>
-                                            </t>
-                                        </td>
-                                        <td style="border: 1px solid black;text-align:center;">
-                                            <span t-esc="line.product_uom_qty" t-options="{'widget' : 'float', 'precision':0}"/> 
-                                            <span t-esc="line.product_id.uom_id.name"/>
-                                        </td>
-                                        <td style="border: 1px solid black;text-align:left;">
-                                            <span t-esc="line.product_id.default_code"/>
-                                        </td>
+                        <div class="row">
+                            <div class="col-6">
+                                <b>Order Date : </b><span t-if="o.date_approve" t-esc="(o.date_approve + relativedelta(hours=+7)).strftime('%d-%B-%Y')"/>
+                            </div>
+                            <div class="col-6">
+                                <b>Expected Arrival : </b><span t-esc="o.date_planned.strftime('%d-%B-%Y')"/>
+                            </div>
+                        </div>
+                        <br/>
+                        <div class="row">
+                            <div class="col-6">
+                                <b>Vendor Details :</b>
+                                <br/>
+                                <div t-field="o.partner_id"/>
+                                <div t-field="o.partner_id.contact_address_complete"/>
+                                <div t-esc="o.partner_id.mobile"/>
+                                <div t-esc="o.partner_id.email"/>
+                            </div>
+                            <div class="col-6">
+                                <b>Shipping Address : </b>
+                                <br/>
+                                <div t-field="o.partner_id.ship_to"/>
+                            </div>
+                        </div>
+                        <br/>
+                        <div>
+                            <table class="table table-sm">
+                                <thead >
+                                    <tr style="font-size:14px">
+                                        <th style="text-align:center;border: 1px solid black;">Product Code</th>
+                                        <th style="text-align:center;border: 1px solid black;">Product Name</th>
+                                        <th style="text-align:center;border: 1px solid black;">Qty Required</th>
+                                        <th style="text-align:center;border: 1px solid black;">Expected Delivery Date</th>
                                     </tr>
-                                </t>
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody >
+                                    <!-- <t t-foreach="o.order_line.filtered(lambda l: l.price_unit)" t-as="line"> -->
+                                    <t t-foreach="o.order_line" t-as="line">
+                                        <tr style="border: 1px solid black;height: 20px;font-size:12px">
+                                            <td style="border: 1px solid black;text-align:left;">
+                                                <span t-esc="line.product_id.default_code"/>
+                                            </td>
+                                            <td style="border: 1px solid black;text-align:left;">
+                                                <t t-if="line.product_id">
+                                                    <span t-esc="line.product_id.name"/>
+                                                </t>
+                                                <t t-else="">
+                                                    <span t-esc="line.name"/>
+                                                </t>
+                                            </td>
+                                            <td style="border: 1px solid black;text-align:center;">
+                                                <span t-esc="line.product_uom_qty" t-options="{'widget' : 'float', 'precision':0}"/> 
+                                                <span t-esc="line.product_id.uom_id.name"/>
+                                            </td>
+                                            <td style="border: 1px solid black;text-align:left;">
+                                                <span t-esc="line.date_planned.strftime('%d-%B-%Y')"/>
+                                            </td>
+                                        </tr>
+                                    </t>
+                                </tbody>
+                            </table>
+                        </div>
+                        <br/>
+                        <t t-if="raw">
+                            <div><span>Please send your formal quotation by email to</span><span style="color:blue;">po.bbk@auliacosmetic.com</span> as soon as possible or within 3 days of receiving this request.</div>
+                        </t>
+                        <t t-if="pack">
+                            <div><span>Please send your formal quotation by email to</span><span style="color:blue;">po@auliacosmetic.com</span> as soon as possible or within 3 days of receiving this request.</div>
+                        </t>
+                        <br/>
+                        <div class="row" style="width:100%; page-break-inside: avoid;">
+                            <!-- First column -->
+                            <div class="col" style="text-align:center; width:25%; border:0px;">
+                                <strong><span>Issued by: </span></strong>
+                                <div><span t-esc="o.create_uid.name"/></div>
+                                <div style="text-align:center; vertical-align: top;">
+                                    <span t-esc="(o.create_date + relativedelta(hours=7)).strftime('%d-%B-%Y %H:%M')"/>
+                                </div>
+                            </div>
+                            <div class="col" style="text-align:center; width:25%; border:0px;">
+                                <!-- <strong><span>Approval by: </span></strong> -->
+                                <div></div>
+                                <div style="text-align:center; vertical-align: top;"></div>
+                            </div>
+                            <div class="col" style="text-align:center; width:25%; border:0px;">
+                                <!-- <strong><span>Approval by: </span></strong> -->
+                                <div></div>
+                                <div style="text-align:center; vertical-align: top;"></div>
+                            </div>
+                            <div class="col" style="text-align:center; width:25%; border:0px;">
+                                <!-- <strong><span>Approval by: </span></strong> -->
+                                <div></div>
+                                <div style="text-align:center; vertical-align: top;"></div>
+                            </div>
+                        </div>
+                        <!-- <div>Issued by: <span t-esc="o.create_uid.name"/> - <span t-esc="(o.create_date + relativedelta(hours=7)).strftime('%d-%B-%Y')"/></div> -->
                     </div>
-                    <br/>
-                    <t t-if="raw">
-                        <div><span style="margin-right:2px;">Please send your formal quotation by email to</span> <span style="color:blue;">po.bbk@auliacosmetic.com</span> as soon as possible or within 3 days of receiving this request.</div>
-                    </t>
-                    <t t-if="pack">
-                        <div><span style="margin-right:2px;">Please send your formal quotation by email to</span> <span style="color:blue;">po@auliacosmetic.com</span> as soon as possible or within 3 days of receiving this request.</div>
-                    </t>
-                    <br/>
-                    <div>Issued by: <span t-esc="o.create_uid.name"/> - <span t-esc="(o.create_date + relativedelta(hours=7)).strftime('%d-%B-%Y')"/></div>
-                </div>
-                <div class="footer">
-                    <img src="/bmo_report/static/img/footer.jpeg" style="width:100%; max-height:90px;"/>
-                    <div class="text-end text-muted">
-                        <div t-if="report_type == 'pdf' and display_name_in_footer" t-out="o.name">(document name)</div>
-                        <div t-if="report_type == 'pdf'">Page <span class="page"/> / <span class="topage"/></div>
-                    </div>
-                </div>
+                </t>
             </t>
         </t>
     </template>
@@ -124,26 +142,26 @@
     
 
     <record id="action_report_rfq_raw" model="ir.actions.report">
-        <field name="name">Report RFQ Raw</field>
+        <field name="name">RFQ Bahan Baku</field>
         <field name="model">purchase.order</field>
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">bmo_report.report_rfq_raw</field>
         <field name="report_file">bmo_report.report_rfq_raw</field>
-        <field name="print_report_name">'RFQ Raw - %s' % object.name</field>
+        <field name="print_report_name">'RFQ Bahan Baku - %s' % object.name</field>
         <field name="binding_model_id" ref="purchase.model_purchase_order"/>
-        <field name="paperformat_id" ref="bmo_report.report_po_paperformat" />
+        <field name="paperformat_id" ref="bmo_report.report_po_paperformat_header" />
         <field name="binding_type">report</field>
     </record>
 
     <record id="action_report_rfq_pack" model="ir.actions.report">
-        <field name="name">Report RFQ Pack</field>
+        <field name="name">RFQ Bahan Kemas</field>
         <field name="model">purchase.order</field>
         <field name="report_type">qweb-pdf</field>
         <field name="report_name">bmo_report.report_rfq_pack</field>
         <field name="report_file">bmo_report.report_rfq_pack</field>
-        <field name="print_report_name">'RFQ Pack - %s' % object.name</field>
+        <field name="print_report_name">'RFQ Bahan Kemas - %s' % object.name</field>
         <field name="binding_model_id" ref="purchase.model_purchase_order"/>
-        <field name="paperformat_id" ref="bmo_report.report_po_paperformat" />
+        <field name="paperformat_id" ref="bmo_report.report_po_paperformat_header" />
         <field name="binding_type">report</field>
     </record>
 </odoo>
