Up: ttd in report sale and change and change paperformat report delivery note

--- a/bmo_report/reports/report_delivery_note.xml
+++ b/bmo_report/reports/report_delivery_note.xml
@@ -160,7 +160,7 @@
         <field name="report_file">bmo_report.report_report_delivery_note</field>
         <field name="print_report_name">'Delivery Note - %s' % object.name</field>
         <field name="binding_model_id" ref="stock.model_stock_picking"/>
-        <field name="paperformat_id" ref="bmo_report.report_do_paperformat" />
+        <field name="paperformat_id" ref="bmo_report.report_so_2_paperformat" />
         <field name="binding_type">report</field>
     </record>
 </odoo>
